ADD transaction list sheet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BankingApp</string>
+    <string name="greetings">Tu es au top, Alice !</string>
 </resources>
