--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="checked_balance">Solde pointé</string>
     <string name="total_balance">Solde total</string>
     <string name="transactions">Transactions</string>
+    <string name="balance">Solde</string>
 </resources>
