--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="total_balance">Solde total</string>
     <string name="transactions">Transactions</string>
     <string name="balance">Solde</string>
+    <string name="my_accounts">Mes comptes</string>
 </resources>
