--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="transactions">Transactions</string>
     <string name="balance">Solde</string>
     <string name="my_accounts">Mes comptes</string>
+    <string name="no_bank_account">Aucun compte bancaire disponible.</string>
 </resources>
